# robo-boy

./: .env.aerostack.example  .env.manipulator.example  .eslintrc.cjs  .gitignore  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.ros  README.md  codecov.yml  docker-compose.aerostack.yml  docker-compose.manipulator.yml  docker-compose.prod.yml  docker-compose.sunrise.yml  docker-compose.yml  generate-icons.ps1  generate-icons.sh  index.html  manifest.webmanifest  package-lock.json  package.json  playwright.config.ts  release-please-config.json  ros_entrypoint.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.json
.github/scripts/: write-log-summary.sh
.github/workflows/: actionlint.yml  ci.yml  codeql.yml  dependency-review.yml  deploy.yml  docker-ci.yml  (+4 more)
config/: playwright.config.ts  tsconfig.node.json  vitest.config.ts
dev-dist/: sw.js
docs/: README.md  architecture.md  custom-gamepads.md  development.md  robot-overlays.md  user-guide.md
e2e/: app-navigation.spec.ts  behavior-tree.spec.ts  entry-page.spec.ts  mobile-workspace.spec.ts  tf-tree.spec.ts  tf-visual-temp.spec.ts
images/: app_functions.mov  app_functions.webm  theme_custom.mov  theme_custom.webm
public/: apple-app-manifest.json  manifest.webmanifest
scripts/: generate-icons.cjs  generate-icons.js  test-docker-build.bat  test-docker-build.sh
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
tf2_web_republisher_py/: README.md
tf2_web_republisher_py/tf2_web_republisher_py/: package.xml  setup.py
(+293 files in other folders)
