<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf2_web_republisher_py</name>
  <version>0.0.0</version>
  <description>Python port of tf2_web_republisher_py for ROS2</description>
  <maintainer email="schoen.andrewj@gmail.com">schoen</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>action_msgs</depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyquaternion</exec_depend>

  <depend>tf2_web_republisher</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
